@@ -1,6 +1,7 @@
 v6.4
 -----
 + Added platform icons to the summer sale homepage
+: Fixed scoreboard scaling to account for live updates
 
 
 v6.3.4
